[metadata]
name = python3-nbctl
summary = Convert ipynb to hugo markdown files
description_file =
    README.md
author = xiexianbin
author_email = me@xiexianbin.cn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.xiexianbin.cn/
project_urls =
    Bug Tracker = https://github.com/x-actions/python3-nbctl/issues
    Source Code = https://github.com/x-actions/python3-nbctl
python-requires = >=3.6
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    nbctl
data_files =

[entry_points]
console_scripts =
    nbctl = nbctl.shell:main

[extras]
